# test_impl

./: Cargo.toml  LICENSE  readme.md
src/: args.rs  impl_block.rs  lib.rs  macro_args.rs
tests/: example.rs  example_lifetime.rs
