[package]
authors = ["Alastair Coote <rust@alastair.is>"]
description = "A macro for use in testing, to run a test on multiple trait implementations"
edition = "2018"
license = "MIT"
name = "test-impl"
repository = "https://github.com/alastaircoote/test_impl"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
